fixed_templates/mongodb_checkov_fixed_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mongodb
  namespace: test-ns
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-13.15.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: mongodb
    port: 27017
    targetPort: mongodb
    nodePort: null
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mongodb
  namespace: test-ns
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-13.15.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        helm.sh/chart: mongodb-13.15.1
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: mongodb
    spec:
      serviceAccountName: release-name-mongodb
      affinity:
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: mongodb
                  app.kubernetes.io/instance: release-name
                  app.kubernetes.io/component: mongodb
              topologyKey: kubernetes.io/hostname
            weight: 1
        nodeAffinity: null
      securityContext:
        fsGroup: 1001
        sysctls: []
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 25000
      containers:
      - name: mongodb
        image: docker.io/bitnami/mongodb:6.0.6-debian-11-r3
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          runAsUser: 25000
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        ports:
        - name: mongodb
          containerPort: 27017
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 10
          exec:
            command:
            - /bitnami/scripts/ping-mongodb.sh
        readinessProbe:
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          exec:
            command:
            - /bitnami/scripts/readiness-probe.sh
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        volumeMounts:
        - name: datadir
          mountPath: /bitnami/mongodb
          subPath: null
        - name: common-scripts
          mountPath: /bitnami/scripts
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
      volumes:
      - name: common-scripts
        configMap:
          name: release-name-mongodb-common-scripts
          defaultMode: 360
      - name: datadir
        persistentVolumeClaim:
          claimName: release-name-mongodb
      - name: secret-volume
        secret:
          secretName: my-secret
      automountServiceAccountToken: false
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
